rust/tests/snapshots/help/profile__list.snap
---
source: tests/cli/snapshots.rs
---
List all configured profiles

Usage: vendo profile list [OPTIONS]

Options:
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
  -h, --help            Print help

Examples:
  $ vendo profile list
